trunk/Archive2/34/7808a085e6ee49/output
main.cpp: In function 'int main()':
main.cpp:19:7: error: 'a' was not declared in this scope
     };a
       ^
